# symbol-detector

./: .envrc  .gitignore  LICENSE  README.md  core.py  detector.py  gui.py  main.py  pyproject.toml  requirements.txt  sampler.py  settings.ini  settings.json.example  settings.py  symbols.py  workers.py
symbol_detector/: constants.py  core.py  detector.py  gui.py  sampler.py  settings.py  symbols.py  workers.py
